--- a/power apps  responsive Form/Src/EndUser view.fx.yaml
+++ b/power apps  responsive Form/Src/EndUser view.fx.yaml
@@ -1,5 +1,5 @@
 "'EndUser view' As screen":
-    Fill: =RGBA(153, 207, 236, 1)
+    Fill: =
 
     Rectangle4 As rectangle:
         Fill: =RGBA(238, 204, 204, 1)
@@ -33,11 +33,77 @@
 
     FormViewer2 As formViewer:
         DataSource: ='end user'
+        Fill: =RGBA(232, 244, 217, 1)
         Height: =662
         Item: =Gallery1.Selected
         Width: =1366
         Y: =106
         ZIndex: =5
+
+        "'final response_DataCard1' As typedDataCard.textualViewCard":
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="finalresponse"
+            Default: =
+            DisplayMode: =DisplayMode.View
+            DisplayName: =
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =40
+            Required: =false
+            Width: =455
+            X: =2
+            Y: =3
+            ZIndex: =1
+
+            DataCardKey24 As label:
+                AutoHeight: =true
+                Height: =34
+                Text: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                Wrap: =false
+                X: =30
+                Y: =10
+                ZIndex: =1
+
+        "'Final Approve_DataCard1' As typedDataCard.toggleViewCard":
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="FinalApprove"
+            Default: =ThisItem.'Final Approve'
+            DisplayMode: =DisplayMode.Edit
+            DisplayName: =DataSourceInfo([@'end user'],DataSourceInfo.DisplayName,"FinalApprove")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =167
+            Required: =false
+            Width: =455
+            X: =0
+            Y: =4
+            ZIndex: =1
+
+            DataCardKey25 As label:
+                AutoHeight: =true
+                Height: =34
+                Size: =25
+                Text: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                Wrap: =false
+                X: =30
+                Y: =10
+                ZIndex: =1
+
+            DataCardValue23 As toggleSwitch:
+                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                Default: =Parent.Default
+                DisplayMode: =Parent.DisplayMode
+                FalseText: ="Pending"
+                Height: =80
+                OnChange: |-
+                    =Patch('end user',First(Filter('end user','status '="Approve by approver 2")),{'status ':"final submitted",'Final Approve':true})
+                OnCheck: =
+                Size: =20
+                TrueText: ="Approve"
+                Width: =294
+                X: =63
+                Y: =65
+                ZIndex: =2
 
         First_Name_DataCard3 As typedDataCard.textualViewCard:
             BorderStyle: =BorderStyle.Solid
@@ -464,49 +530,6 @@
                 Width: =168
                 X: =113
                 Y: =65
-                ZIndex: =2
-
-        "'Final response_DataCard2' As typedDataCard.toggleViewCard":
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="Final_x0020_response"
-            Default: =ThisItem.'Final response'
-            DisplayMode: =DisplayMode.View
-            DisplayName: =DataSourceInfo([@'end user'],DataSourceInfo.DisplayName,"Final_x0020_response")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =187
-            Required: =false
-            Width: =455
-            X: =2
-            Y: =3
-            ZIndex: =6
-
-            DataCardKey40 As label:
-                AutoHeight: =true
-                Height: =34
-                Size: =25
-                Text: =Parent.DisplayName
-                Width: =Parent.Width - 60
-                Wrap: =false
-                X: =30
-                Y: =10
-                ZIndex: =1
-
-            Button7 As button:
-                DisplayMode: =If(!DataCardValue38=true,DisplayMode.Disabled)
-                Fill: =RGBA(152, 208, 70, 1)
-                FontWeight: =FontWeight.Bold
-                Height: =93
-                OnSelect: |
-                    =Patch('end user',First(Filter('end user','status '="Approve by approver 2")),{'status ':"Final Approved",'Final response':true});
-                RadiusBottomLeft: =60
-                RadiusBottomRight: =60
-                RadiusTopLeft: =60
-                RadiusTopRight: =60
-                Size: =25
-                Text: ="Submit"
-                Width: =243
-                X: =50
-                Y: =88
                 ZIndex: =2
 
     Image14 As image:
