--- a/power apps  responsive Form/Src/First Approver.fx.yaml
+++ b/power apps  responsive Form/Src/First Approver.fx.yaml
@@ -54,6 +54,141 @@
         Y: =119
         ZIndex: =9
 
+        admin1_DataCard3 As typedDataCard.comboBoxEditCard:
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="admin1"
+            Default: =ThisItem.admin1
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@'end user'],DataSourceInfo.DisplayName,"admin1")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =50
+            Required: =false
+            Update: =DataCardValue19.Selected
+            Width: =455
+            X: =0
+            Y: =3
+            ZIndex: =1
+
+            DataCardKey21 As label:
+                AutoHeight: =true
+                Height: =34
+                Text: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                Wrap: =false
+                X: =30
+                Y: =30
+                ZIndex: =1
+
+            DataCardValue19 As combobox:
+                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                DefaultSelectedItems: =Parent.Default
+                DisplayFields: =["DisplayName","Email","Picture"]
+                DisplayMode: =Parent.DisplayMode
+                Items: =Choices([@'end user'].admin1)
+                PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
+                SearchFields: =["DisplayName"]
+                SearchItems: =Choices('end user'.admin1,DataCardValue19.SearchText)
+                SelectMultiple: =false
+                Template: =ListItemTemplate.Person
+                Tooltip: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardKey21.Y + DataCardKey21.Height + 5
+                ZIndex: =2
+
+            ErrorMessage30 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardValue19.Y + DataCardValue19.Height
+                ZIndex: =3
+
+            StarVisible30 As label:
+                Align: =Align.Center
+                Height: =DataCardKey21.Height
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey21.Y
+                ZIndex: =4
+
+        "'Comment 1_DataCard3' As typedDataCard.textualEditCard":
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="Comments"
+            Default: =ThisItem.'Comment 1'
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@'end user'],DataSourceInfo.DisplayName,"Comments")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =50
+            MaxLength: =DataSourceInfo([@'end user'], DataSourceInfo.MaxLength, "Comments")
+            Required: =false
+            Update: =DataCardValue13.Text
+            Width: =455
+            X: =1
+            Y: =3
+            ZIndex: =1
+
+            DataCardKey17 As label:
+                AutoHeight: =true
+                Height: =34
+                Text: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                Wrap: =false
+                X: =30
+                Y: =16
+                ZIndex: =1
+
+            DataCardValue13 As text:
+                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                Default: =Parent.Default
+                DelayOutput: =true
+                DisplayMode: =Parent.DisplayMode
+                MaxLength: =Parent.MaxLength
+                PaddingLeft: =5
+                RadiusBottomLeft: =0
+                RadiusBottomRight: =0
+                RadiusTopLeft: =0
+                RadiusTopRight: =0
+                Tooltip: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =64
+                ZIndex: =2
+
+            ErrorMessage17 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardValue13.Y + DataCardValue13.Height
+                ZIndex: =3
+
+            StarVisible17 As label:
+                Align: =Align.Center
+                Height: =DataCardKey17.Height
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey17.Y
+                ZIndex: =4
+
         First_Name_DataCard4 As typedDataCard.textualEditCard:
             BorderStyle: =BorderStyle.Solid
             DataField: ="Title"
@@ -664,98 +799,27 @@
                 Y: =DataCardKey55.Y
                 ZIndex: =4
 
-        "'Comment 1_DataCard6' As typedDataCard.textualEditCard":
-            BorderStyle: =BorderStyle.Solid
-            DataField: ="Comments"
-            Default: =ThisItem.'Comment 1'
-            DisplayMode: =DisplayMode.Edit
-            DisplayName: =DataSourceInfo([@'end user'],DataSourceInfo.DisplayName,"Comments")
-            Fill: =RGBA(0, 0, 0, 0)
-            Height: =200
-            MaxLength: =DataSourceInfo([@'end user'], DataSourceInfo.MaxLength, "Comments")
-            Required: =false
-            Update: =DataCardValue57.Text
-            Width: =455
-            X: =0
-            Y: =270
-            ZIndex: =10
-
-            DataCardKey57 As label:
-                AutoHeight: =true
-                FontWeight: =FontWeight.Bold
-                Height: =34
-                Size: =25
-                Text: =Parent.DisplayName
-                Width: =Parent.Width - 60
-                Wrap: =false
-                Y: =133
-                ZIndex: =1
-
-            DataCardValue57 As text:
-                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                Default: =Parent.Default
-                DelayOutput: =true
-                DisplayMode: =Parent.DisplayMode
-                MaxLength: =Parent.MaxLength
-                PaddingLeft: =5
-                RadiusBottomLeft: =0
-                RadiusBottomRight: =0
-                RadiusTopLeft: =0
-                RadiusTopRight: =0
-                Size: =20
-                Tooltip: =Parent.DisplayName
-                Width: =455
-                Y: =188
-                ZIndex: =2
-
-            ErrorMessage28 As label:
-                AutoHeight: =true
-                Height: =10
-                Live: =Live.Assertive
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Text: =Parent.Error
-                Visible: =Parent.DisplayMode=DisplayMode.Edit
-                Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardValue57.Y + DataCardValue57.Height
-                ZIndex: =3
-
-            StarVisible28 As label:
-                Align: =Align.Center
-                Height: =DataCardKey57.Height
-                Text: ="*"
-                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                Width: =30
-                Wrap: =false
-                Y: =DataCardKey57.Y
-                ZIndex: =4
-
-    ComboBox1 As combobox:
-        ChevronBackground: =RGBA(109, 49, 162, 1)
-        DisplayFields: =["DisplayName"]
-        Height: =59
-        IsSearchable: =false
-        Items: |-
-            =Office365Users.SearchUser({searchTerm:ComboBox1.SearchText}).DisplayName
-        SearchFields: =["DisplayName"]
-        SearchItems: =[]
-        SelectMultiple: =false
-        Width: =411
-        X: =20
-        Y: =462
-        ZIndex: =10
-
     Button6 As button:
         Fill: =RGBA(255, 0, 0, 1)
         FontWeight: =FontWeight.Bold
         Height: =75
-        OnSelect: |+
-            =Patch('end user',First(Filter('end user','status '="Pending")),{'status ':"approved rejected",'approve 1':false,'Comment 1':DataCardValue57.Text,admin1:ComboBox1});
-            
-            
+        OnSelect: |-
+            =Patch(
+                'end user',
+                First(
+                    Filter(
+                        'end user',
+                        'status ' = "Pending"
+                    )
+                ),
+                {
+                    'status ': "approved rejected",
+                    'approve 1': false,
+                    'Comment 1': DataCardValue13.Text,
+                    admin1: DataCardValue19.Selected
+                }
+            );
+            ResetForm(Form4)
         RadiusBottomLeft: =60
         RadiusBottomRight: =60
         RadiusTopLeft: =60
@@ -764,15 +828,16 @@
         Text: ="Reject"
         Width: =281
         X: =776
-        Y: =489
+        Y: =573
         ZIndex: =11
 
     Button12 As button:
         Fill: =RGBA(141, 198, 63, 1)
         FontWeight: =FontWeight.Bold
         Height: =75
-        OnSelect: |
-            =Patch('end user',First(Filter('end user','status '="Pending")),{'status ':"approved 1",'approve 1':true,'Comment 1':DataCardValue57.Text,admin1:ComboBox1});
+        OnSelect: |-
+            =Patch('end user',First(Filter('end user','status '="Pending")),{'status ':"approved 1",'approve 1':true,'Comment 1':DataCardValue13.Text,admin1:DataCardValue19.Selected});
+            ResetForm(Form4)
         RadiusBottomLeft: =60
         RadiusBottomRight: =60
         RadiusTopLeft: =60
@@ -780,16 +845,7 @@
         Size: =25
         Text: ="Approve"
         Width: =263
-        X: =470
-        Y: =489
+        X: =472
+        Y: =581
         ZIndex: =12
-
-    Label12 As label:
-        FontWeight: =FontWeight.Bold
-        Height: =42
-        Size: =25
-        Text: ="Admin 1"
-        X: =48
-        Y: =404
-        ZIndex: =13
 
