--- a/power apps  responsive Form/Src/End User.fx.yaml
+++ b/power apps  responsive Form/Src/End User.fx.yaml
@@ -21,7 +21,10 @@
         Height: =70
         Icon: =Icon.Save
         OnSelect: |
-            =Patch('end user',Defaults('end user'),{First_Name:DataCardValue84.Text,'Last Name':DataCardValue85.Text,'Full Name':DataCardValue86.Text,'Email Id':DataCardValue87.Text,'Bid Id':DataCardValue88.Text,Bid_value:Value(DataCardValue89.Text),Bid_quantity:Value(DataCardValue90.Text),Total:Value(DataCardValue91.Text),'status ':"Pending",admin1:Blank(),admin2:Blank(),'Comment 1':"",Comment2:"",'Final Approve':false});
+            =
+            //Patch('end user',Defaults('end user'),{First_Name:DataCardValue84.Text,'Last Name':DataCardValue85.Text,'Full Name':DataCardValue86.Text,'Email Id':DataCardValue87.Text,'Bid Id':DataCardValue88.Text,Bid_value:Value(DataCardValue89.Text),Bid_quantity:Value(DataCardValue90.Text),Total:Value(DataCardValue91.Text),'status ':"Pending",admin1:Blank(),admin2:Blank(),'Comment 1':"",Comment2:"",'Final Approve':false});//
+            
+            powerappstoautomate.Run(DataCardValue84.Text,DataCardValue85.Text,DataCardValue86.Text,DataCardValue87.Text,DataCardValue88.Text,Value(DataCardValue89.Text),Value(DataCardValue90.Text),Value(DataCardValue91.Text),DataCardValue9.Text);
             
             ResetForm(Form9);
             Navigate(Gallery1);
@@ -177,6 +180,77 @@
                 Width: =30
                 Wrap: =false
                 Y: =DataCardKey14.Y
+                ZIndex: =4
+
+        "'status _DataCard1' As typedDataCard.textualEditCard":
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="status"
+            Default: =ThisItem.'status '
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@'end user'],DataSourceInfo.DisplayName,"status")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =50
+            MaxLength: =DataSourceInfo([@'end user'], DataSourceInfo.MaxLength, "status")
+            Required: =false
+            Update: =DataCardValue9.Text
+            Width: =455
+            X: =1
+            Y: =3
+            ZIndex: =1
+
+            DataCardKey9 As label:
+                AutoHeight: =true
+                Height: =34
+                Text: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                Wrap: =false
+                X: =30
+                Y: =10
+                ZIndex: =1
+
+            DataCardValue9 As text:
+                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                Default: =Parent.Default
+                DelayOutput: =true
+                DisplayMode: =DisplayMode.View
+                Fill: =RGBA(246, 88, 16, 1)
+                FontWeight: =FontWeight.Bold
+                MaxLength: =Parent.MaxLength
+                PaddingLeft: =5
+                RadiusBottomLeft: =0
+                RadiusBottomRight: =0
+                RadiusTopLeft: =0
+                RadiusTopRight: =0
+                Size: =20
+                Tooltip: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardKey9.Y + DataCardKey9.Height + 5
+                ZIndex: =2
+
+            ErrorMessage9 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardValue9.Y + DataCardValue9.Height
+                ZIndex: =3
+
+            StarVisible9 As label:
+                Align: =Align.Center
+                Height: =DataCardKey9.Height
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey9.Y
                 ZIndex: =4
 
         First_Name_DataCard8 As typedDataCard.textualEditCard:
