--- a/power apps  responsive Form/Src/approver 1 screen.fx.yaml
+++ b/power apps  responsive Form/Src/approver 1 screen.fx.yaml
@@ -7,7 +7,7 @@
 
     "Gallery3 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
         Height: =553
-        Items: =Filter('end user',StartsWith(Title,TextInput7.Text))
+        Items: =Filter('end user',StartsWith(First_Name,TextInput7.Text))
         Layout: =Layout.Vertical
         TemplatePadding: =0
         TemplateSize: =140
