--- a/power apps  responsive Form/Src/End User.fx.yaml
+++ b/power apps  responsive Form/Src/End User.fx.yaml
@@ -22,7 +22,7 @@
         Icon: =Icon.Save
         OnSelect: |
             =
-            //Patch('end user',Defaults('end user'),{First_Name:DataCardValue84.Text,'Last Name':DataCardValue85.Text,'Full Name':DataCardValue86.Text,'Email Id':DataCardValue87.Text,'Bid Id':DataCardValue88.Text,Bid_value:Value(DataCardValue89.Text),Bid_quantity:Value(DataCardValue90.Text),Total:Value(DataCardValue91.Text),'status ':"Pending",admin1:Blank(),admin2:Blank(),'Comment 1':"",Comment2:"",'Final Approve':false});//
+            //Patch('end user',Defaults('end user'),{First_Name:DataCardValue84.Text,'Last Name':DataCardValue85.Text,'Full Name':DataCardValue86.Text,'Email Id':DataCardValue87.Text,'Bid Id':DataCardValue88.Text,Bid_value:Value(DataCardValue89.Text),Bid_quantity:Value(DataCardValue90.Text),Total:Value(DataCardValue91.Text),'status ':"Pending",admin1:Blank(),admin2:Blank(),'Comment 1':"",Comment2:"",'Final Approve':false});
             
             powerappstoautomate.Run(DataCardValue84.Text,DataCardValue85.Text,DataCardValue86.Text,DataCardValue87.Text,DataCardValue88.Text,Value(DataCardValue89.Text),Value(DataCardValue90.Text),Value(DataCardValue91.Text),DataCardValue9.Text);
             
